--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ html {
     text-transform: uppercase;
     font-weight: 900;
     color: #151d3d;
-    text-shadow: 0 0 10px #010101;
+    text-shadow: 0 0 10px #dde02d;
   }
 
 .main-article {
